remove right part

--- a/index.html
+++ b/index.html
@@ -443,11 +443,11 @@
       </div>
     </div>
 
-    <div id="dropdown" class="dropdown">
+    <!-- <div id="dropdown" class="dropdown">
       <strong class="dropdown-label" onclick="toggle">
         Click me to open!
       </strong>
-    </div>
+    </div> -->
 
     <script type="module">
       import autoAnimate from "./js/autoAnimate.js";
