--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Timezone Comparison</title>
+    <title>TeamZone</title>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
@@ -24,7 +24,7 @@
       <div class="flex flex-col h-full">
         <div class="border-b flex justify-between h-[55px] items-center">
           <div class="ps-2">
-            <h1 class="text-xl">Timezone Comparison</h1>
+            <h1 class="text-xl">TeamZone</h1>
           </div>
           <!-- Buttons for Export/Import -->
           <div class="flex flex-wrap gap-3 pe-2">
